--- a/quotation.html
+++ b/quotation.html
@@ -99,7 +99,7 @@
     const grandtotal = urlParams.get("grandtotal") || "";
 
     function formatCurrency(numberStr) {
-    const number = parseFloat(numberStr.replace(/,/g, ""));
+    const number = parseFloat(numberStr.replace(/./g. ""));
     if (isNaN(number)) return numberStr;
     return number.toLocaleString("id-ID") + " IDR";
   }
