--- a/quotation.html
+++ b/quotation.html
@@ -6,7 +6,7 @@
   <title>Quotation</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Nunito, sans-serif;
       padding: 20px;
     }
     h2 {
