--- a/quotation.html
+++ b/quotation.html
@@ -26,7 +26,7 @@
     }
     .signature-pad {
       border: 1px solid #000;
-      width: 20%;
+      width: 40%;
       height: 200px;
       border-radius: 10px; /* ini bikin ujung tombol jadi membulat */
     }
@@ -35,7 +35,7 @@
     }
     .button-group button {
       margin-right: 10px;
-      padding: 20px 30px;
+      padding: 15px 30px;
       border-radius: 10px; /* ini bikin ujung tombol jadi membulat */
       background-color: #4da6ff; /* biru muda */
       color: white; /* teks jadi putih */
@@ -54,7 +54,7 @@
 }
     .label-row span:first-child {
   width: 250px;  /* Atur agar semua label panjangnya sama */
-  text-align: right;
+  text-align: left;
     }
     @media print {
       #signature-pad, .button-group {
