--- a/quotation.html
+++ b/quotation.html
@@ -18,12 +18,15 @@
       width: 100%;
       border-collapse: collapse;
       margin-top: 10px;
+      line-height: 1.2;
     }
-    th, td {
+   th, td {
       border: 1px solid #000;
-      padding: 8px;
+      padding: 4px 6px; /* atas-bawah: 4px, kiri-kanan: 6px */
       text-align: left;
+      font-size: 14px;
     }
+
     .signature-pad {
       border: 1px solid #000;
       width: 50%;
