--- a/quotation.html
+++ b/quotation.html
@@ -53,7 +53,7 @@
     justify-content: flex-start;
     font-size: 12px;
     margin: 8px 0;
-    gap: 2px;
+    gap: 10%;
 }
     .label-row span:first-child {
   width: 250px;  /* Atur agar semua label panjangnya sama */
