--- a/quotation.html
+++ b/quotation.html
@@ -113,7 +113,7 @@
   </div>
 
   <!-- Signature Pad -->
-  <h3>Customer Signature</h3>
+  <h3>Warna Global Surya</h3>
   <canvas id="signature-pad" class="signature-pad"></canvas>
   <div class="button-group">
     <button onclick="clearSignature()">Clear</button>
