--- a/quotation.html
+++ b/quotation.html
@@ -11,6 +11,12 @@
     }
     h2 {
       margin-top: 10px;
+      margin-bottom: 5px;
+      text-align: left;
+      font-size: 15;
+      font-weight: normal;
+    sh {
+      margin-top: 5px;
       text-align: left;
       font-size: 15;
     }
@@ -69,7 +75,7 @@
 <body>
 
   <h1 id="project-name"></h1>
-  <h2 id="production-house"></h2>
+  <sh id="production-house"></sh>
 
   <!-- Tabel Equipments -->
   <div id="equipment-section"></div>
