--- a/quotation.html
+++ b/quotation.html
@@ -9,6 +9,13 @@
       font-family: Calibri;
       padding: 20px;
     }
+     h1 {
+      margin-top: 10px;
+      margin-bottom: 0px;
+      text-align: left;
+      font-size: 20;
+      font-weight: bold;
+     }
     h2 {
       margin-top: 10px;
       margin-bottom: 5px;
@@ -17,7 +24,7 @@
       font-weight: normal;
     }
     sh {
-      margin-top: 5px;
+      margin-top: 0px;
       text-align: left;
       font-size: 15;
     }
