--- a/quotation.html
+++ b/quotation.html
@@ -18,9 +18,9 @@
      }
     h2 {
       margin-top: 10px;
-      margin-bottom: 0px;
+      margin-bottom: 5px;
       text-align: left;
-      font-size: 10;
+      font-size: 15;
       font-weight: normal;
     }
     sh {
@@ -86,7 +86,7 @@
   <sh id="production-house"></sh>
 
   <!-- Tabel Equipments -->
-  <div id="equipment-section"></div>
+  <div style="font-size: 20; margin-bottom: 0px;"id="equipment-section"></div>
 
   <!-- Total Cost Equipments -->
   <div class="label-row">
