--- a/quotation.html
+++ b/quotation.html
@@ -8,6 +8,7 @@
     body {
       font-family: Calibri;
       padding: 20px;
+      font-size: 10;
     }
      h1 {
       margin-top: 10px;
@@ -86,7 +87,7 @@
   <sh id="production-house"></sh>
 
   <!-- Tabel Equipments -->
-  <div style="font-size: 20; margin-bottom: 0px;"id="equipment-section"></div>
+  <div id="equipment-section"></div>
 
   <!-- Total Cost Equipments -->
   <div class="label-row">
