--- a/quotation.html
+++ b/quotation.html
@@ -29,6 +29,13 @@
       text-align: left;
       font-size: 15;
     }
+    thead {
+      margin-top: 10px;
+      margin-bottom: 0px;
+      text-align: left;
+      font-size: 15;
+      font-weight: normal;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
