--- a/quotation.html
+++ b/quotation.html
@@ -29,6 +29,11 @@
       text-align: left;
       font-size: 15;
     }
+    #equipment-section {
+      text-align: left;
+      font-size: 15;
+      font-weight: normal;
+    }
     thead {
       margin-top: 10px;
       margin-bottom: 0px;
