--- a/quotation.html
+++ b/quotation.html
@@ -29,7 +29,7 @@
       text-align: left;
       font-size: 15;
     }
-    #equipment-section {
+    equipment-section {
       text-align: left;
       font-size: 15;
       font-weight: normal;
