--- a/quotation.html
+++ b/quotation.html
@@ -26,6 +26,7 @@
     }
     sh {
       margin-top: 0px;
+      margin-bottom: 10px;
       text-align: left;
       font-size: 15;
     }
@@ -40,7 +41,7 @@
       border: 1px solid #000;
       padding: 4px 6px; /* atas-bawah: 4px, kiri-kanan: 6px */
       text-align: left;
-      font-size: 15px;
+      font-size: 12px;
     }
 
     .signature-pad {
