--- a/quotation.html
+++ b/quotation.html
@@ -8,6 +8,8 @@
     body {
       font-family: Calibri;
       padding: 20px;
+      padding-bottom: 0;
+      margin-bottom: 0;
       font-size: 10;
     }
      h1 {
