--- a/quotation.html
+++ b/quotation.html
@@ -7,10 +7,12 @@
   <style>
     body {
       font-family: Calibri;
-      padding-bottom: 0;
-      margin-bottom: 0;
+      padding: 20px;
       font-size: 10;
     }
+    table, tr, td, th, div {
+  page-break-inside: avoid;
+}
      h1 {
       margin-top: 10px;
       margin-bottom: 0px;
