--- a/quotation.html
+++ b/quotation.html
@@ -8,7 +8,7 @@
     body {
       font-family: Calibri;
       padding: 20px;
-      font-size: 10;
+      font-size: 10px;
     }
     table, tr, td, th, div {
   page-break-inside: avoid;
@@ -17,21 +17,21 @@
       margin-top: 10px;
       margin-bottom: 0px;
       text-align: left;
-      font-size: 20;
+      font-size: 20px;
       font-weight: bold;
      }
     h2 {
       margin-top: 10px;
       margin-bottom: 5px;
       text-align: left;
-      font-size: 15;
+      font-size: 15px;
       font-weight: normal;
     }
-    sh {
+    #production-house {
       margin-top: 0px;
       margin-bottom: 10px;
       text-align: left;
-      font-size: 15;
+      font-size: 15px;
     }
   
     table {
@@ -89,7 +89,7 @@
 <body>
 
   <h1 id="project-name"></h1>
-  <sh id="production-house"></sh>
+  <p id="production-house"></p>
 
   <!-- Tabel Equipments -->
   <div id="equipment-section"></div>
