--- a/quotation.html
+++ b/quotation.html
@@ -95,7 +95,7 @@
 
   <!-- Total Cost Equipments -->
   <div class="label-row">
-  <span>Total Cost Equipments</span>
+  <span style="margin-bottom: 20px;">Total Cost Equipments</span>
   <span>: <span id="total-cost-orders"></span></span>
 </div>
 
