--- a/quotation.html
+++ b/quotation.html
@@ -9,9 +9,6 @@
       font-family: Calibri;
       padding: 20px;
     }
-    table, tr, td, th, div {
-  page-break-inside: avoid;
-}
      h1 {
       margin-top: 10px;
       margin-bottom: 0px;
@@ -82,6 +79,20 @@
       #signature-pad, .button-group {
         display: none;
       }
+       table, tr, td, th, div {
+    page-break-inside: avoid !important;
+    break-inside: avoid !important;
+  }
+
+  body {
+    margin: 0 !important;
+    padding-bottom: 0 !important;
+  }
+
+  html, body {
+    height: auto !important;
+    overflow: visible !important;
+  }
     }
   </style>
 </head>
@@ -133,7 +144,7 @@
   </div>
 
   <!-- Signature Pad -->
-  <h3>Warna Global Surya</h3>
+  <h3 style="margin-top: 15px;">Warna Global Surya</h3>
   <canvas id="signature-pad" class="signature-pad"></canvas>
   <div class="button-group">
     <button onclick="clearSignature()">Clear</button>
