--- a/quotation.html
+++ b/quotation.html
@@ -121,7 +121,7 @@
 
   <!-- Discount -->
   <div class="label-row">
-  <span>Discount</span>
+  <span>Discount for Equipments</span>
   <span>: <span id="discount"></span></span>
   </div>
 
