--- a/quotation.html
+++ b/quotation.html
@@ -128,7 +128,7 @@
    <!-- After Discount -->
   <div class="label-row">
   <span>Total Cost After Discount for Equipments</span>
-  <span>: <span id="afterDiscount"></span></span>
+  <span>: <span id="after-discount"></span></span>
   </div>
 
   <!-- Grand Total -->
