--- a/quotation.html
+++ b/quotation.html
@@ -88,6 +88,7 @@
 
   <h1 id="project-name"></h1>
   <p id="production-house"></p>
+   <p style="margin-bottom: 0px; margin-top: 20px; font-size: 20px;">Equipments</p>
 
   <!-- Tabel Equipments -->
   <div id="equipment-section"></div>
