--- a/quotation.html
+++ b/quotation.html
@@ -100,7 +100,7 @@
 </div>
 
   <!-- Tabel Guard and Others -->
-  <h2>Guard and Others</h2>
+  <p style="margin-bottom: 0px; margin-top: 20px; font-size: 20px;">Guard and Others</p>
   <table id="guard-table">
     <thead>
       <tr>
