--- a/quotation.html
+++ b/quotation.html
@@ -139,7 +139,7 @@
   </div>
 
   <!-- Signature Pad -->
-  <p style="margin-top: 30px; font-weight: normal; font-size: 20px;">Regards,</p>
+  <p style="margin-top: 30px; font-weight: normal; font-size: 10px;">Regards,</p>
   <canvas id="signature-pad" class="signature-pad"></canvas>
   <div class="button-group">
     <button onclick="clearSignature()">Clear</button>
@@ -147,8 +147,8 @@
     <button onclick="window.print()">Print</button>
   </div>
   <div id="saved-signature"></div>
-  <p style="font-size: 20px;" id="username"></p>
-  <p style="margin-top: 0px; font-weight: bold; font-size: 20px;">PT Warna Global Surya</p>
+  <p style="margin-bottom: 0px; font-size: 20px;" id="username"></p>
+  <p style="margin-top: 0px; font-weight: bold; font-size: 10px;">PT Warna Global Surya</p>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
