--- a/quotation.html
+++ b/quotation.html
@@ -46,6 +46,9 @@
       text-align: left;
       font-size: 12px;
     }
+    th {
+      background-color: #FFFF00;
+    }
 
     .signature-pad {
       border: 1px solid #000;
