--- a/quotation.html
+++ b/quotation.html
@@ -88,6 +88,9 @@
     height: 0 !important;
     visibility: hidden;
       }
+      th {
+        background-color: #FFFF00;
+      }
     }
   </style>
 </head>
