--- a/quotation.html
+++ b/quotation.html
@@ -89,9 +89,10 @@
     visibility: hidden;
       }
       th {
-    background-color: #FFFF00 !important;
+    background-color: black !important;
     -webkit-print-color-adjust: exact; /* untuk Chrome & Safari */
     print-color-adjust: exact;         /* untuk Firefox */
+    font-color: white !important;
   }
     }
   </style>
