--- a/quotation.html
+++ b/quotation.html
@@ -92,7 +92,7 @@
     background-color: black !important;
     -webkit-print-color-adjust: exact; /* untuk Chrome & Safari */
     print-color-adjust: exact;         /* untuk Firefox */
-    font-color: white !important;
+    color: white;
   }
     }
   </style>
