--- a/quotation.html
+++ b/quotation.html
@@ -47,7 +47,8 @@
       font-size: 12px;
     }
     th {
-      background-color: #FFFF00;
+      background-color: black;
+      color: white;
     }
 
     .signature-pad {
