--- a/quotation.html
+++ b/quotation.html
@@ -102,7 +102,7 @@
 
   <h1 id="project-name"></h1>
   <p id="production-house"></p>
-   <p style="margin-bottom: 0px; margin-top: 20px; font-size: 20px; font-weight: bold;">Equipments</p>
+   <p style="margin-bottom: 0px; margin-top: 20px; font-size: 20px; font-weight: bold;">Equipments</p> <p style="text-align: Right; margin-bottom: 0px; margin-top: 20px; font-size: 20px; font-weight: bold;">Quotatation Number : </p>
 
   <!-- Tabel Equipments -->
   <div id="equipment-section"></div>
