--- a/quotation.html
+++ b/quotation.html
@@ -101,8 +101,11 @@
 <body>
 
   <h1 id="project-name"></h1>
-  <p id="production-house"></p>
   
+  <div class="label-row">
+  <span>Quotation Number</span>
+  <span>: <span id="production-house"></span></span>
+  </div>
   <div class="label-row">
   <span>Quotation Number</span>
   <span>: <span id="quote-number"></span></span>
