--- a/quotation.html
+++ b/quotation.html
@@ -103,7 +103,7 @@
   <h1 id="project-name"></h1>
   
   <div class="label-row">
-  <span>Quotation Number</span>
+  <span>Production House/Company</span
   <span>: <span id="production-house"></span></span>
   </div>
   <div class="label-row">
